test/files/neg/bug105.scala
object T extends Array[Int](1);
